--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "katex": "0.16.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-katex": "3.0.1",
+    "react-latex": "2.0.0",
     "react-router-dom": "7.1.4"
   },
   "devDependencies": {
